--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,85 +2,76 @@ name: binary build
 
 on:
   push:
-    branches:
-      - master
+    branches: ['*']
   pull_request:
-    branches:
-      - master
+    branches: ['*']
 
 jobs:
   build:
-    # The CMake configure and build commands are platform agnostic and should work equally
-    # well on Windows or Mac.  You can convert this to a matrix build if you need
-    # cross-platform coverage.
-    # See: https://docs.github.com/en/actions/configuring-and-managing-workflows/configuring-a-workflow#configuring-a-build-matrix
     runs-on: ${{ matrix.os }}
 
     strategy:
       matrix:
-        os: [ubuntu-20.04, windows-2022, macos-13]
+        os: [ubuntu-latest, macos-14, ubuntu-latest-arm, windows-2022, macos-13]
         build_type: ['Release']
         staticcompile: ['ON', 'OFF']
 
     steps:
     - uses: actions/checkout@v4.1.1
-    
+
     # install dependencies
     - name: Install boost & help2man for Linux
-      if: matrix.os == 'ubuntu-20.04'
+      if: contains(matrix.os, 'ubuntu')
       run: sudo apt-get update && sudo apt-get install -yq help2man
-    
+
     - name: Add git submodules for Linux only (not needed for non-testing)
-      if: matrix.os == 'ubuntu-20.04'
+      if: contains(matrix.os, 'ubuntu')
       run: git submodule update --init
 
     - name: Configure CMake for linux
-      if: matrix.os == 'ubuntu-20.04'
-      # Use a bash shell so we can use the same syntax for environment variable
-      # access regardless of the host operating system
-      #working-directory: ${{runner.workspace}}/build
-      # Note the current convention is to use the -S and -B options here to specify source 
-      # and build directories, but this is only available with CMake 3.13 and higher.  
-      # The CMake binaries on the Github Actions machines are (as of this writing) 3.12
+      if: contains(matrix.os, 'ubuntu')
       run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} -DENABLE_TESTING=ON  -DSTATICCOMPILE=${{ matrix.staticcompile }}
-    
+
     - name: Configure CMake for non-linux
       if: matrix.os != 'ubuntu-20.04'
-      # Use a bash shell so we can use the same syntax for environment variable
-      # access regardless of the host operating system
-      #working-directory: ${{runner.workspace}}/build
-      # Note the current convention is to use the -S and -B options here to specify source 
-      # and build directories, but this is only available with CMake 3.13 and higher.  
-      # The CMake binaries on the Github Actions machines are (as of this writing) 3.12
       run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} -DENABLE_TESTING=OFF -DSTATICCOMPILE=${{ matrix.staticcompile }}
 
     - name: Build
-      #working-directory: ${{runner.workspace}}/build
-      # Execute the build.  You can specify a specific target with "--target <NAME>"
       run: cmake --build . --config ${{ matrix.build_type }}
 
     - name: Test
-      #working-directory: ${{runner.workspace}}/build
-      # Execute tests defined by the CMake configuration.  
-      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest -C ${{ matrix.build_type }}
-      
-    - name: Upload Artifact - Linux
-      if: matrix.os == 'ubuntu-20.04' && matrix.staticcompile == 'ON'
+
+    - name: Upload Artifact - LinuxAMD64
+      if: contains(matrix.os, 'ubuntu') && matrix.staticcompile == 'ON' && !contains(matrix.os, 'arm')
       uses: actions/upload-artifact@v4
       with:
         name: breakid-linux-amd64
         path: breakid
-    
-    - name: Upload Artifact - Mac
-      if: matrix.os == 'macos-13' && matrix.staticcompile == 'ON'
+
+    - name: Upload Artifact - LinuxARM64
+      if: contains(matrix.os, 'ubuntu') && matrix.staticcompile == 'ON' && contains(matrix.os, 'arm')
+      uses: actions/upload-artifact@v4
+      with:
+        name: breakid-linux-amd64
+        path: breakid
+
+    - name: Upload Artifact - MacAMD64
+      if: contains(matrix.os, 'macos-13') && matrix.staticcompile == 'ON'
       uses: actions/upload-artifact@v4
       with:
         name: breakid-mac-amd64
         path: breakid
 
+    - name: Upload Artifact - MacARM64
+      if: contains(matrix.os, 'macos-14') && matrix.staticcompile == 'ON'
+      uses: actions/upload-artifact@v4
+      with:
+        name: breakid-mac-arm64
+        path: breakid
+
     - name: Upload Artifact - Windows
-      if: matrix.os == 'windows-2022' && matrix.staticcompile == 'ON'
+      if: contains(matrix.os, 'windows') && matrix.staticcompile == 'ON'
       uses: actions/upload-artifact@v4
       with:
         name: breakid-win64.exe
