--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-14, ubuntu-latest-arm, windows-2022, macos-13]
+        os: [ubuntu-latest, macos-14, ubuntu-24.04-arm, windows-2022, macos-13]
         build_type: ['Release']
         staticcompile: ['ON', 'OFF']
 
