--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
       if: contains(matrix.os, 'ubuntu') && matrix.staticcompile == 'ON' && contains(matrix.os, 'arm')
       uses: actions/upload-artifact@v4
       with:
-        name: breakid-linux-amd64
+        name: breakid-linux-arm64
         path: breakid
 
     - name: Upload Artifact - MacAMD64
