--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,28 +14,20 @@ jobs:
       fail-fast: false
 
       matrix:
-        os: [ubuntu-latest, macos-14, ubuntu-24.04-arm, macos-13]
+        os: [ubuntu-latest, macos-14, ubuntu-24.04-arm, macos-13, windows-latest]
         build_type: [Release]
         staticcompile: [ON, OFF]
-        c_compiler: [gcc]
-        cpp_compiler: [g++]
 
     steps:
     - uses: actions/checkout@v4
       with:
         path: project
         submodules: 'true'
-
     - name: Build project
       run: |
         cd project
         mkdir -p build && cd build
-        cmake \
-        -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }} \
-        -DCMAKE_C_COMPILER=${{ matrix.c_compiler }} \
-        -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
-        -DSTATICCOMPILE=${{ matrix.staticcompile }} \
-        -S ..
+        cmake -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }} -DSTATICCOMPILE=${{ matrix.staticcompile }} -S ..
         cmake --build . --config ${{matrix.build_type}} -v
 
     - name: Upload Artifact - LinuxAMD64
